<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".SignUpFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"

        />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="Cadastrar"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textFontWeight="800"
        android:textSize="32dp"
        app:fontFamily="@font/poppins" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".1"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
            android:hint="@string/loginUserHint"
            android:inputType="textFilter"
            android:padding="5dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_edittext"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890@."
            android:hint="@string/loginEmailHint"
            android:inputType="textFilter"
            android:padding="5dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:padding="5dp"
            android:paddingHorizontal="10dp"
            android:textColor="@color/colorPrimary"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/siginbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ripple_rounded_button"
                android:clickable="true"
                android:paddingHorizontal="40dp"
                android:text="Cadastrar"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>